--- a/CoffeeMachine/CoffeeMachine.csproj
+++ b/CoffeeMachine/CoffeeMachine.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Models\Services\OrderDetails.cs" />
     <Compile Include="Models\Services\OrderLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\OrderDetailViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
